fix: se corrigienron algunas lineas de codigo en estilos para asegurar que el modal de inscripcion sea visible

--- a/frontend/css/estilos-components.css
+++ b/frontend/css/estilos-components.css
@@ -16,6 +16,12 @@
   background-color: var(--azul-oscuro);
 }
 
+.header-container {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 /* footer */
 .footer-top {
   background-color: var(--gris-claro);
